--- a/job_status/requirements.txt
+++ b/job_status/requirements.txt
@@ -1,4 +1,4 @@
-aws-lambda-powertools
-requests
-boto3
-instructure-dap-client
+aws-lambda-powertools==2.4.0
+requests==2.28.1
+boto3==1.26.22
+instructure-dap-client==0.2.2
