removed leading slash from ssm param paths when using them in policy templates (otherwise the leading slash is doubled and the policy doesn't work)

--- a/.gitignore
+++ b/.gitignore
@@ -215,6 +215,7 @@ venv.bak/
 !.vscode/launch.json
 !.vscode/extensions.json
 .history
+*.code-workspace
 
 ### Windows ###
 # Windows thumbnail cache files
